data/all_generated_tests/raw_wast_tests/loop_StackCorruption_352.wast
;; 3. **Test for `br_table` with Multiple Branch Targets**:    - Use a `br_table` inside a loop with multiple branch targets, including one that restarts the loop and one that exits. Check the stack state at the end.    - **Constraint**: Correct determination and handling of branch targets, ensuring stack consistency.    - **Relation to Stack Corruption**: Mismanagement of branch targets can lead to incorrect stack operations and corruption.

(assert_invalid
  (module
    (func $br_table_loop
      (block
        (loop
          (br_table 0 1)
          (i32.const 0)
        )
        (i32.const 1)
      )
      (i32.eqz)
    )
  )
  "type mismatch"
)